objects/Case_History_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case History Entries</relationshipLabel>
        <relationshipName>Case_History_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PreviousUpdate__c</fullName>
        <label>Previous Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_CaseId__c</fullName>
        <description>from UE instance</description>
        <label>Previous CaseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case History Entry</label>
    <nameField>
        <label>Case History Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case History Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>